--- a/PokemonCPP.vcxproj.filters
+++ b/PokemonCPP.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="src\Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Zones.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\SDLFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\Zones.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\Keyboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\Pokemon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
