--- a/PokemonCPP.vcxproj
+++ b/PokemonCPP.vcxproj
@@ -55,7 +55,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2main.lib;SDL2test.lib</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2main.lib;SDL2test.lib;SDL2_ttf.lib</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -71,20 +71,24 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2main.lib;SDL2test.lib</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2main.lib;SDL2test.lib;SDL2_ttf.lib</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="headers\Pokemon.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\SDLFunctions.cpp" />
+    <ClCompile Include="src\Text.cpp" />
     <ClCompile Include="src\Zones.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\Keyboard.h" />
+    <ClInclude Include="headers\Moves.h" />
     <ClInclude Include="headers\Player.h" />
     <ClInclude Include="headers\Pokemon.h" />
+    <ClInclude Include="headers\Text.h" />
     <ClInclude Include="headers\Zones.h" />
     <ClInclude Include="src\SDLFunctions.h" />
   </ItemGroup>
