--- a/PokemonCPP.vcxproj
+++ b/PokemonCPP.vcxproj
@@ -78,17 +78,23 @@
   <ItemGroup>
     <ClCompile Include="headers\Pokemon.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="src\Battle.cpp" />
+    <ClCompile Include="src\Moves.cpp" />
     <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\PokeMath.cpp" />
     <ClCompile Include="src\SDLFunctions.cpp" />
     <ClCompile Include="src\Text.cpp" />
     <ClCompile Include="src\Zones.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="headers\Battle.h" />
     <ClInclude Include="headers\Keyboard.h" />
     <ClInclude Include="headers\Moves.h" />
     <ClInclude Include="headers\Player.h" />
+    <ClInclude Include="headers\PokeMath.h" />
     <ClInclude Include="headers\Pokemon.h" />
     <ClInclude Include="headers\Text.h" />
+    <ClInclude Include="headers\Trainer.h" />
     <ClInclude Include="headers\Zones.h" />
     <ClInclude Include="src\SDLFunctions.h" />
   </ItemGroup>
